# squidex

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: benchmark.yml  ci.yml  release.yml
benches/: README.md  search_bench.rs  throughput_benchmarks.rs
proto/: raft.proto
src/: config.rs  error.rs  lib.rs
src/api/: handlers.rs  mod.rs  router.rs  types.rs
src/consensus/: grpc_service.rs  mod.rs  network.rs  node.rs  storage.rs  types.rs
src/metrics/: mod.rs
src/models/: command.rs  document.rs  filter.rs  mod.rs  search.rs
src/persistence/: blob_log.rs  doc_store.rs  mod.rs
src/query/: accessor.rs  ast.rs  context.rs  executor.rs  mod.rs  parser.rs  planner.rs  types.rs
src/query/nodes/: all_docs.rs  bool_query.rs  fuzzy_query.rs  match_query.rs  mod.rs  phrase_query.rs  prefix_query.rs  range_query.rs  term_query.rs  terms_query.rs  wildcard_query.rs
src/query/query_string/: lexer.rs  mod.rs  parser.rs
src/schema/: field_type.rs  mapping.rs  mod.rs
src/segment/: buffer.rs  docno_map.rs  docvalues.rs  index.rs  manifest.rs  merge.rs  mod.rs  postings.rs  reader.rs  statistics.rs  store.rs  term_dict.rs  types.rs  writer.rs
src/state_machine/: indexer.rs  instrumented.rs  machine.rs  mod.rs  raft_impl.rs  scoring.rs  snapshot.rs
src/testing/: events.rs  history.rs  invariants.rs  mod.rs
src/tokenizer/: tokenizer.rs
src/vector/: codebook.rs  hnsw.rs  mod.rs  quantized_store.rs
tests/: cluster_integration.rs  golden_search.rs  invariant_tests.rs  query_integration.rs  throughput_test.rs
