[package]
name = "squidex"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
authors = ["Sacha Arbonel"]
description = "Distributed keyword & vector search engine built on Octopii"
repository = "https://github.com/sachaarbonel/squidex"
keywords = ["search", "vector", "distributed", "raft", "bm25"]
categories = ["database-implementations", "data-structures"]

[[bin]]
name = "squidex"
path = "bin/squidex.rs"

[dependencies]
# Octopii distributed systems kernel (Raft + WAL + QUIC)
octopii = { git = "https://github.com/octopii-rs/octopii", features = ["openraft"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP server
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
bytes = "1.5"

# Concurrency
parking_lot = "0.12"

# Text processing
unicode-segmentation = "1.11"
rust-stemmers = "1.2"
stop-words = "0.8"

# Monitoring
prometheus = { version = "0.13", features = ["process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
thiserror = "1.0"
anyhow = "1.0"
num_cpus = "1.16"
chrono = "0.4"
clap = { version = "4.4", features = ["derive", "env"] }

[dev-dependencies]
tempfile = "3.9"
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
