[package]
name = "squidex"
version = "2.1.0"
edition = "2021"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
authors = ["Sacha Arbonel"]
description = "Production-ready distributed hybrid search engine"
repository = "https://github.com/sachaarbonel/squidex"
keywords = ["search", "vector", "distributed", "raft", "bm25"]
categories = ["database-implementations", "data-structures"]

[[bin]]
name = "squidex"
path = "bin/squidex.rs"

[dependencies]
# Consensus (OpenRaft)
openraft = { version = "0.9", features = ["serde", "storage-v2"] }

# Networking (gRPC)
tonic = { version = "0.11", features = ["tls", "gzip"] }
prost = "0.12"
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

# Storage (Fjall for Raft log)
fjall = "3.0.1"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
async-trait = "0.1"
futures = "0.3"

# HTTP server
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "compression-full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
bytes = "1.5"

# Concurrency
parking_lot = "0.12"
dashmap = "5.5"
crossbeam = "0.8"

# Text processing
unicode-segmentation = "1.11"
rust-stemmers = "1.2"
stop-words = "0.8"

# Monitoring
prometheus = { version = "0.13", features = ["process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
thiserror = "1.0"
anyhow = "1.0"
num_cpus = "1.16"
chrono = "0.4"
clap = { version = "4.4", features = ["derive", "env"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
crc32fast = "1.4"

# Segment-based index
fst = "0.4"
memmap2 = "0.9"
arc-swap = "1.6"
roaring = "0.10"
ordered-float = "5.1.0"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tempfile = "3.9"
proptest = "1.4"
criterion = "0.5"

[[bench]]
name = "search_bench"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
